--- a/css/style.css
+++ b/css/style.css
@@ -119,7 +119,7 @@ section{
 
 
 .h1_thomas{
-    font-family: 'Gotham Pro', sans-serif;
+    font-family: 'Gotham Pro Black', sans-serif;
     color: #013b5a;
     margin-top: 0%;
     font-size: 93px;
@@ -248,7 +248,6 @@ section{
     margin-top: 3rem;
     padding-top: 10rem;
     font-size: 40px;
-    font-weight: 900;
     margin: 0 auto;
     text-align: center;
 }
@@ -371,7 +370,6 @@ section{
     margin-top: 3rem;
     padding-top: 10rem;
     font-size: 40px;
-    font-weight: 900;
     margin: 0 auto;
     text-align: center;
 }
@@ -399,7 +397,7 @@ section{
     font-family: 'Century Gothic', CenturyGothic;
     color: #013b5a;
     font-size: 40px;
-    font-weight: 900;
+    font-weight: 700;
     text-align: center;
 }
 
@@ -407,7 +405,7 @@ section{
     font-family: 'Century Gothic', CenturyGothic;
     color: #33a7e7;
     font-size: 35px;
-    font-weight: 900;
+    font-weight: 700;
     text-align: center;
 }
 
@@ -420,6 +418,8 @@ section{
     text-align: center;
     font-weight: 400;
     margin-top: 3rem;
+    margin-right: 1rem;
+    margin-left: 1rem;
 }
 
 .contactmevia{
