--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,15 @@
          url("//db.onlinewebfonts.com/t/0be7748549934c0e481bdb7b8ba5270f.svg#Gotham Pro Black") format("svg");
 }
 
+@font-face {
+    font-family: "Century Gothic"; src: url("fonts/century-gothic.eot");
+    src: url("fonts/century-gothic.eot?#iefix") format("embedded-opentype"),
+    url("fonts/century-gothic.woff2") format("woff2"),
+    url("fonts/century-gothic.woff") format("woff"),
+    url("fonts/century-gothic.ttf") format("truetype"),
+    url("fonts/century-gothic.svg#Century Gothic") format("svg");
+}
+
 @import url('http://fonts.cdnfonts.com/css/gotham');
 
 *{
@@ -131,7 +140,7 @@ section{
     color: #013b5a;
     margin-top: 0%;
     font-size: 93px;
-    font-weight: 700;
+    font-weight: 500;
     line-height: 78.163px;
     margin: 0 auto;
     text-align: center;
@@ -387,7 +396,7 @@ section{
     justify-items: center;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(20rem, 60fr));
-    gap: 3rem;
+    gap: 1rem;
     max-width: 1100px;
     margin-left: auto;
     margin-right: auto;
