--- a/css/style.css
+++ b/css/style.css
@@ -10,12 +10,12 @@
 }
 
 @font-face {
-    font-family: "Century Gothic"; src: url("./fonts/century-gothic.eot");
-    src: url("./fonts/century-gothic.eot?#iefix") format("embedded-opentype"),
-    url("./fonts/century-gothic.woff2") format("woff2"),
-    url("./fonts/century-gothic.woff") format("woff"),
-    url("./fonts/century-gothic.ttf") format("truetype"),
-    url("./fonts/century-gothic.svg#Century Gothic") format("svg");
+    font-family: "Century Gothic"; src: url("//fonts/century-gothic.eot");
+    src: url("//fonts/century-gothic.eot?#iefix") format("embedded-opentype"),
+    url("//fonts/century-gothic.woff2") format("woff2"),
+    url("//fonts/century-gothic.woff") format("woff"),
+    url("//fonts/century-gothic.ttf") format("truetype"),
+    url("//fonts/century-gothic.svg#Century Gothic") format("svg");
 }
 
 @import url('http://fonts.cdnfonts.com/css/gotham');
